server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-17.snap
---
source: src/search/search_executor/mod.rs
description: splitting necessary
expression: actual
info: "'MW0001' should get '5510.EG.001' in 1 results # splitting necessary"
---
- facet: rooms
  entries:
    - id: 5510.EG.001
      type: room
      name: 5510.EG.001 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0001@5510
    - id: 5519.EG.001
      type: room
      name: 5519.EG.001 (Versuchsfläche I)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0001@5519
    - id: 5510.02.001
      type: room
      name: "5510.02.001 (\u0019MW\u0017 2001 Rudolf-Diesel-Hörsaal)"
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2001@5510
    - id: 5502.01.250
      type: room
      name: 5502.01.250 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 1250@5502
    - id: 5502.EG.250
      type: room
      name: 5502.EG.250 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0250@5502
    - id: 5503.EG.350
      type: room
      name: 5503.EG.350 (Egbert-von-Hoyer-Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0350@5503
    - id: 5506.EG.608M
      type: room
      name: 5506.EG.608M (Otto-Lilienthal-Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0608M@5506
    - id: 5508.02.801
      type: room
      name: 5508.02.801 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 1801@5508
    - id: 5539.EG.001A
      type: room
      name: "5539.EG.001A (Hörsaal 1A,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.001A@5539
    - id: 5539.EG.001B
      type: room
      name: "5539.EG.001B (Hörsaal 1B,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.001B@5539
  n_visible: 10
  estimatedTotalHits: 1000
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
