server/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-2.snap
---
source: src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'wzw' should get 'wzw' in 1 results"
---
- facet: sites_buildings
  entries:
    - id: wzw
      type: campus
      name: Campus Weihenstephan (Freising)
      subtext: Campus
    - id: wzw-extern
      type: area
      name: School of of Life Sciences Außenstellen
      subtext: Gebiet / Gruppe von Gebäuden
    - id: wzw-berg
      type: area
      name: Gebiet 4100 Berg
      subtext: Gebiet / Gruppe von Gebäuden
    - id: wzw-mitte
      type: area
      name: Gebiet 4200 Mitte
      subtext: Gebiet / Gruppe von Gebäuden
    - id: wzw-nord
      type: area
      name: Gebiet 4300 Nord / Hochfeld
      subtext: Gebiet / Gruppe von Gebäuden
  n_visible: 5
  estimatedTotalHits: 170
- facet: rooms
  entries:
    - id: 4101.01.129
      type: room
      name: "4101.01.129 (Hörsaal 6 (\u0019WZW\u0017H06))"
      subtext: "weihenstephan, Verwaltung / BLQ Brau- und Lebensmittelqualität"
      subtext_bold: 129@4101
    - id: 4102.EG.034
      type: room
      name: "4102.EG.034 (Hörsaal 1 (\u0019WZW\u0017H01))"
      subtext: "weihenstephan, Hörsaal- und Dekanatsgebäude"
      subtext_bold: E-34@4102
    - id: 4102.EG.036
      type: room
      name: "4102.EG.036 (Hörsaal 2 (\u0019WZW\u0017H02))"
      subtext: "weihenstephan, Hörsaal- und Dekanatsgebäude"
      subtext_bold: E-35@4102
    - id: 4108.EG.105
      type: room
      name: "4108.EG.105 (Hörsaal 9 (\u0019WZW\u0017H09))"
      subtext: "weihenstephan, BLQ Lebensmittelsicherheit"
      subtext_bold: 105@4108
    - id: 4108.EG.106
      type: room
      name: "4108.EG.106 (Hörsaal 8 (\u0019WZW\u0017H08))"
      subtext: "weihenstephan, BLQ Lebensmittelsicherheit"
      subtext_bold: 106@4108
  n_visible: 5
  estimatedTotalHits: 1000
